# councilAi

./: .gitignore  README.md  render.yaml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: config.py  main.py
apps/api/app/adapters/bitget/: rest.py  ws.py
apps/api/app/adapters/coingecko/: rest.py
apps/api/app/adapters/supabase/: client.py
apps/api/app/api/: deps.py
apps/api/app/api/routes/: council.py  health.py  journal.py  market.py  portfolio.py
apps/api/app/api/ws/: council_ws.py  market_ws.py
apps/api/app/domain/: enums.py  events.py  models.py
apps/api/app/services/council/: confidence.py  debate.py  demo.py  graph.py  session.py  signal.py  state.py  voting.py
apps/api/app/services/council/agents/: base.py  execution.py  news.py  quant.py  risk.py  technical.py
apps/api/app/services/hub/: broadcaster.py
apps/api/app/services/journal/: service.py
apps/api/app/services/llm/: cadence.py  client.py
apps/api/app/services/market/: cache.py  indicators.py  service.py
apps/api/app/services/paper/: analytics.py  engine.py  manager.py  pnl.py  portfolio.py  store.py
apps/api/app/utils/: logging.py  retry.py
apps/api/tests/: test_analytics.py  test_cache.py  test_compliance.py  test_council.py  test_dashboard.py  test_debate.py  test_indicators.py  test_journal.py  test_live_pnl.py  test_paper_engine.py  test_portfolio_manager.py  test_streaming.py  test_trade_detail.py  test_trade_ledger.py  test_voting.py
apps/web/: .env.local.example  README.md  package-lock.json  package.json  preview.html  tailwind.config.ts
(+51 files in other folders)
